// After chaing this file, your have trigger code generation for this by issuing
// yarn gen
syntax = "proto3";

import "common.proto";
import "asset.proto";
import "category.proto";
package inventory;


service ProductService {
  rpc createProduct (CreateProductRequest) returns (ProductDto) {};
  rpc updateProduct (UpdateProductRequest) returns (ProductDto) {};
  rpc deleteProduct (ObjectId) returns (ProductDto) {};
  rpc search (SearchRequest) returns (ProductListDto) {};
  rpc createProductVariants (ProductVariantsRequest) returns (ProductVariantListDto) {};
  rpc updateProductVariants (ProductVariantsRequest) returns (ProductVariantListDto) {};
  rpc deleteProductVariant (ObjectId) returns (ProductVariantDto) {};
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  int32 qualityStock = 3;
  repeated ProductVariantDto variants = 4;
  repeated string assets = 5;
  repeated string categories = 6;
}

message UpdateProductRequest {
  UpdateConditions conditions=1;
  CreateProductRequest data=2;
}

message ProductListDto {
  repeated ProductDto products = 1;
  int32 total = 2;
}

message ProductVariantDto {
  string id=1;
  string name=2;
  string description = 3;
  bool enabled = 4;
  int32 stockOnHand = 5;
  int32 stockAllocated = 6;
  int32 outOfStockThreshold = 7;
  repeated ProductOptionDto options = 8;
  string sku = 9;
  float price = 10;
  repeated AssetDto assets=11;
  int32 version = 12;
}

message ProductVariantsRequest {
  UpdateConditions conditions=1;
  repeated ProductVariantDto variants=2;  
}

message ProductVariantListDto {
  repeated ProductVariantDto variants=1;
}

message ProductOptionDto {
  string id = 1;
  string name = 2;
  string code = 3;
  string description = 4;
}

message ProductDto {
  string id = 1;
  string name = 2;
  string description = 3;  
  repeated ProductVariantDto variants = 4;
  repeated AssetDto assets = 5;
  repeated CategoryDto categories = 6;
  int32 version = 7;
}


